--- a/server/package.json
+++ b/server/package.json
@@ -4,5 +4,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
