--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "push": "git add . && git commit -m \"WIP\" && git push"
+    "push": "git add . && git commit -m \"WIP\" && git push",
+    "build": "npm run watch --prefix client & nodemon server/app.js"
   },
   "keywords": [],
   "author": "",
